News for pip
============

tip
---


0.8
---

* Track which ``build/`` directories pip creates, never remove directories
  it doesn't create.  From Hugo Lopes Tavares.

* Pip now accepts file:// index URLs. Thanks Dave Abrahams.

* Various cleanup to make test-running more consistent and less fragile.
  Thanks Dave Abrahams.

* Real Windows support (with passing tests). Thanks Dave Abrahams.

* ``pip-2.7`` etc. scripts are created (Python-version specific scripts)

* ``contrib/build-standalone`` script creates a runnable ``.zip`` form of
  pip, from Jannis Leidel

* Editable git repos are updated when reinstalled

* Fix problem with ``--editable`` when multiple ``.egg-info/`` directories
  are found.

* A number of VCS-related fixes for ``pip freeze``, from Hugo Lopes Tavares.

* Significant test framework changes, from Hugo Lopes Tavares.

0.7.2
-----

* Set zip_safe=False to avoid problems some people are encountering where
  pip is installed as a zip file.

0.7.1
-----

* Fixed opening of logfile with no directory name. Thanks Alexandre Conrad.

* Temporary files are consistently cleaned up, especially after
  installing bundles, also from Alex Conrad.

* Tests now require at least ScriptTest 1.0.3.

0.7
---

* Fixed uninstallation on Windows
* Added ``pip search`` command.
* Tab-complete names of installed distributions for ``pip uninstall``.
* Support tab-completion when there is a global-option before the
  subcommand.
* Install header files in standard (scheme-default) location when installing
  outside a virtualenv. Install them to a slightly more consistent
  non-standard location inside a virtualenv (since the standard location is
  a non-writable symlink to the global location).
* pip now logs to a central location by default (instead of creating
  ``pip-log.txt`` all over the place) and constantly overwrites the
  file in question. On Unix and Mac OS X this is ``'$HOME/.pip/pip.log'``